# AL_Medical_chatbot

./: .gitignore  app.py  config.yaml  injection.py  main.py  pyproject.toml  requirements.txt
