[project]
name = "chatbot-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "langchain-huggingface>=1.2.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "langchain-community>=0.4.2",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
]
